# mathlib

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.yml
.github/workflows/: cmake_blas_backend.yml  cmake_inhouse.yml  cmake_lapack_backend.yml
include/interpolation/: cubic_spline.hpp  linear.hpp
include/mathlib/: dual_number.hpp  polynomial.hpp
include/mathlib/integral/: simpson.hpp
include/mathlib/interpolation/: cubic_spline.hpp  linear.hpp
include/mathlib/nlp/: cost_function.hpp  levenberg_marquardt.hpp  nelder_mead.hpp  solver_common.hpp  steepest_descent.hpp
include/mathlib/ode/: runge_kutta.hpp
include/mathlib/roots/: secant.hpp
include/nlp/: cost_function.hpp  nelder_mead.hpp  solver_common.hpp  steepest_descent.hpp
include/roots/: secant.hpp
test/: CMakeLists.txt  dual_number.cc  polynomial.cc
test/integral/: simpson.cc
test/interpolation/: cubic_spline.cc  linear.cc
test/nlp/: cost_function.cc  levenberg_marquardt.cc  nelder_mead.cc  steepest_descent.cc
test/ode/: runge_kutta.cc
test/roots/: secant.cc
